--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "phantasma-sdk-ts",
-  "version": "0.1.76",
+  "version": "0.1.77",
   "description": "Javascript SDK for interacting with the Phantasma Chain",
   "author": "Phantasma Team",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "build": "tsc",
     "build:umd": "tsc && browserify dist/index.js -s phantasma > html/phantasma.js",
