--- a/package.json
+++ b/package.json
@@ -57,14 +57,14 @@
     "@types/elliptic": "^6.4.18",
     "@types/jest": "^30.0.0",
     "@types/wif": "^2.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
     "browserify": "^17.0.1",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.4.0",
     "jest": "^30.2.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.46.1"
   }
 }
