--- a/package.json
+++ b/package.json
@@ -3,8 +3,29 @@
   "version": "0.2.0-rc.15",
   "description": "Javascript SDK for interacting with the Phantasma Chain",
   "author": "Phantasma Team",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./*": {
+      "types": "./dist/types/*.d.ts",
+      "import": "./dist/esm/*.js",
+      "require": "./dist/cjs/*.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/types/*"
+      ]
+    }
+  },
   "publishConfig": {
     "access": "public",
     "tag": "rc"
@@ -13,10 +34,15 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "tsc",
-    "build:umd": "tsc && browserify dist/index.js -s phantasma > html/phantasma.js",
-    "test": "jest",
-    "tests": "jest",
+    "build": "npm run clean && npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:umd": "npm run build:cjs && browserify dist/cjs/index.js -s phantasma > html/phantasma.js",
+    "clean": "node scripts/clean-dist.mjs",
+    "test": "npm run test:cjs && npm run test:esm",
+    "tests": "npm run test",
+    "test:cjs": "jest --config jest.config.js --runInBand",
+    "test:esm": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.esm.cjs --runInBand",
     "coverage": "jest --coverage",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
