--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "csharp-binary-stream": "^1.1.0",
     "elliptic": "^6.6.1",
     "ethereumjs-wallet": "^1.0.2",
+    "phantasma-sdk-ts": "^0.2.0-rc.18",
     "tiny-secp256k1": "^2.2.4",
     "wif": "^2.0.6"
   },
