--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phantasma-sdk-ts",
-  "version": "0.2.5",
-  "description": "Javascript SDK for interacting with the Phantasma Chain",
+  "version": "0.2.6",
+  "description": "Typescript SDK for interacting with the Phantasma Chain",
   "author": "Phantasma Team",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
